--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complex Labirinto 2026</title>
+    <title>Complex Labirinto</title>
     <style>
         :root {
             --primary: #ff4d6d;
@@ -293,5 +293,6 @@
     </script>
 </body>
 </html>
+
 
 
